--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 
-
     <application
         android:name=".core.hilt.MyApp"
         android:allowBackup="true"
@@ -19,6 +18,9 @@
         android:theme="@style/Theme.Edokan"
         tools:targetApi="31">
         <activity
+            android:name=".ui.seller.SellerAddProductActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.seller.SellerAddMarketplaceActivity"
             android:exported="false" />
         <activity
@@ -30,6 +32,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
     </application>
 
 </manifest>
