--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,14 +1,16 @@
 [versions]
 accompanistPermissions = "0.26.3-beta"
 activityCompose = "1.9.1"
-activityComposeVersion = "1.5.0"
+activityComposeVersion = "1.9.1"
 agp = "8.5.2"
 coilCompose = "2.0.0"
+composeStepper = "1.0.0-beta01"
+composeStepperVersion = "1.0.0-beta01"
 converterGson = "2.9.0"
 datastorePreferences = "1.1.1"
 firebaseAuth = "23.0.0"
-firebaseBom = "33.1.2"
-firebaseFirestore = "25.0.0"
+firebaseBom = "33.2.0"
+firebaseFirestore = "25.1.0"
 hiltAndroid = "2.52"
 hiltAndroidCompiler = "2.52"
 kotlin = "1.9.25"
@@ -42,6 +44,7 @@ androidx-paging-runtime = { module = "androidx.paging:paging-runtime", version.r
 androidx-ui-tooling = { module = "androidx.compose.ui:ui-tooling" }
 androidx-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
+compose-stepper = { module = "com.github.maryamrzdh:compose-stepper", version.ref = "composeStepperVersion" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
 firebase-auth = { module = "com.google.firebase:firebase-auth", version.ref = "firebaseAuth" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
